--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Ticket</string>
+    <string name="tutorial">Правила игры:</string>
+    <string name="rules_of_the_game_t">Правила игры очнь простые. Быстро посчитай сумму первых и последних трёх цифр в билетике. Если суммы равны, то скорее нажимай на левую часть экрана.</string>
+    <string name="rules_of_the_game_f">Если суммы не равны, то надо нажать на правую половину твоего телефона.</string>
+    <string name="go">Приступим? :)</string>
+    <string name="yes">Да!</string>
 </resources>
