--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="enter_nickname">Введите никнейм</string>
     <string name="hello">Привет!</string>
     <string name="message_success">Успешно!</string>
+    <string name="message_error">Ошибка!</string>
     <string name="error_enter_the_name">Пожалуйста, введите никнейм</string>
 </resources>
