--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="friend">Друг</string>
     <string name="toBegin">Начать</string>
     <string name="records">Рекорды</string>
+    <string name="record">Рекорд:</string>
+    <string name="points">Очки:</string>
 </resources>
