--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="records">Рекорды</string>
     <string name="record">Рекорд:</string>
     <string name="points">Очки:</string>
+    <string name="get_ready">Приготовься, игра начнётся через: %1$d </string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
