--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,9 @@
     <string name="friend">Друг</string>
     <string name="toBegin">Начать</string>
     <string name="records">Рекорды</string>
-    <string name="record">Рекорд:</string>
-    <string name="points">Очки:</string>
-    <string name="get_ready">Приготовься, игра начнётся через: %1$d </string>
+    <string name="record">Рекорд: %1$d</string>
+    <string name="points">Очки: %1$d</string>
+    <string name="get_ready">Приготовься, игра начнётся через: %1$d</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
