--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="point_ov">очков</string>
     <string name="start_over">Начать заново?</string>
     <string name="play_fair">Ай-ай-ай, играй честно :)</string>
+    <string name="one">1</string>
 </resources>
